xidl-parser/tests/snapshots/test_const__typed_ast__const_hex.snap
---
source: xidl-parser/tests/test-const.rs
expression: ast
---
Specification(
    [
        ConstDcl(
            ConstDcl {
                annotations: [],
                ty: IntegerType(
                    SignedInt(
                        SignedLongInt(
                            SignedLongInt,
                        ),
                    ),
                ),
                ident: Identifier(
                    "a",
                ),
                value: ConstExpr(
                    XorExpr(
                        AndExpr(
                            ShiftExpr(
                                AddExpr(
                                    MultExpr(
                                        UnaryExpr(
                                            PrimaryExpr(
                                                Literal(
                                                    IntegerLiteral(
                                                        HexNumber(
                                                            "0xff",
                                                        ),
                                                    ),
                                                ),
                                            ),
                                        ),
                                    ),
                                ),
                            ),
                        ),
                    ),
                ),
            },
        ),
    ],
)
